Creation of main classes

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 .gradle/
 .idea/
 gradle/
-!/gradle.properties
-!/gradlew
-!/gradlew.bat
-!/settings.gradle.kts
+/gradle.properties
+/gradlew
+/gradlew.bat
+/settings.gradle.kts
+/build.gradle.kts
